@@ -17,7 +17,7 @@ jobs:
 
       # Git Checkout
       - name: Checkout Code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v6
         with:
           token: "${{ secrets.PAT || secrets.GITHUB_TOKEN }}"
       - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
